[gd_scene load_steps=13 format=3 uid="uid://dxpumxqrovykw"]

[ext_resource type="Script" path="res://assets/scripts/Robot.gd" id="1_id8v3"]
[ext_resource type="Shader" path="res://assets/shaders/shadow_mask.gdshader" id="3_qeeyo"]
[ext_resource type="Shader" path="res://assets/shaders/LinearGradientLighting.gdshader" id="4_syk3c"]
[ext_resource type="Script" path="res://assets/scripts/SpriteStack.gd" id="5_oxmoa"]
[ext_resource type="Texture2D" uid="uid://c52weqkuwwmiu" path="res://assets/sprites/Robot2.png" id="6_mcoxp"]
[ext_resource type="PackedScene" uid="uid://b2fmo0i1scr7r" path="res://assets/nodes/miscellaneous/FullPointLight2D.tscn" id="6_ymhag"]
[ext_resource type="AudioStream" uid="uid://budl0nya1s57r" path="res://assets/sound/sound_effects/Hover.wav" id="7_67uqg"]
[ext_resource type="AudioStream" uid="uid://ccovit4b5itod" path="res://assets/sound/sound_effects/PickUpDrop.wav" id="8_i2xuy"]
[ext_resource type="PackedScene" uid="uid://cfjkvvt8u3iys" path="res://assets/nodes/miscellaneous/Laser.tscn" id="9_h26v7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3cbsa"]
shader = ExtResource("3_qeeyo")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a20n8"]
shader = ExtResource("4_syk3c")
shader_parameter/unshaded_color = Vector4(0.09, 0.09, 0.09, 1)
shader_parameter/highlight_color = Vector3(0, 0, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ixqj"]
size = Vector2(8, 4)

[node name="Robot" type="CharacterBody2D"]
collision_mask = 2
motion_mode = 1
script = ExtResource("1_id8v3")

[node name="SpriteStackShadow" type="Node2D" parent="."]
light_mask = 0
position = Vector2(0, 4)
scale = Vector2(1, 0.667)
script = ExtResource("5_oxmoa")

[node name="Sprite2D12" type="Sprite2D" parent="SpriteStackShadow"]
light_mask = 0
z_index = 5
material = SubResource("ShaderMaterial_3cbsa")
texture = ExtResource("6_mcoxp")
region_enabled = true
region_rect = Rect2(176, 16, 16, 16)

[node name="SpriteStack" type="Node2D" parent="."]
material = SubResource("ShaderMaterial_a20n8")
scale = Vector2(1, 0.667)
script = ExtResource("5_oxmoa")
height_gap = -1.0

[node name="Sprite2D1" type="Sprite2D" parent="SpriteStack"]
light_mask = 0
z_index = 6
texture = ExtResource("6_mcoxp")
region_enabled = true
region_rect = Rect2(0, 16, 16, 16)

[node name="Sprite2D2" type="Sprite2D" parent="SpriteStack"]
light_mask = 0
z_index = 7
position = Vector2(0, -1)
texture = ExtResource("6_mcoxp")
region_enabled = true
region_rect = Rect2(16, 16, 16, 16)

[node name="Sprite2D3" type="Sprite2D" parent="SpriteStack"]
light_mask = 0
z_index = 8
position = Vector2(0, -2)
texture = ExtResource("6_mcoxp")
region_enabled = true
region_rect = Rect2(32, 16, 16, 16)

[node name="Sprite2D4" type="Sprite2D" parent="SpriteStack"]
light_mask = 0
z_index = 9
position = Vector2(0, -3)
texture = ExtResource("6_mcoxp")
region_enabled = true
region_rect = Rect2(48, 16, 16, 16)

[node name="Sprite2D5" type="Sprite2D" parent="SpriteStack"]
light_mask = 0
z_index = 10
position = Vector2(0, -4)
texture = ExtResource("6_mcoxp")
region_enabled = true
region_rect = Rect2(64, 16, 16, 16)

[node name="Sprite2D6" type="Sprite2D" parent="SpriteStack"]
light_mask = 0
z_index = 11
position = Vector2(0, -5)
texture = ExtResource("6_mcoxp")
region_enabled = true
region_rect = Rect2(80, 16, 16, 16)

[node name="Sprite2D7" type="Sprite2D" parent="SpriteStack"]
light_mask = 0
z_index = 12
position = Vector2(0, -6)
texture = ExtResource("6_mcoxp")
region_enabled = true
region_rect = Rect2(96, 16, 16, 16)

[node name="Sprite2D8" type="Sprite2D" parent="SpriteStack"]
light_mask = 0
z_index = 13
position = Vector2(0, -7)
texture = ExtResource("6_mcoxp")
region_enabled = true
region_rect = Rect2(112, 16, 16, 16)

[node name="Sprite2D9" type="Sprite2D" parent="SpriteStack"]
light_mask = 0
z_index = 14
position = Vector2(0, -8)
texture = ExtResource("6_mcoxp")
region_enabled = true
region_rect = Rect2(128, 16, 16, 16)

[node name="Sprite2D10" type="Sprite2D" parent="SpriteStack"]
light_mask = 0
z_index = 15
position = Vector2(0, -9)
texture = ExtResource("6_mcoxp")
region_enabled = true
region_rect = Rect2(144, 16, 16, 16)

[node name="Sprite2D11" type="Sprite2D" parent="SpriteStack"]
light_mask = 0
z_index = 16
position = Vector2(0, -10)
texture = ExtResource("6_mcoxp")
region_enabled = true
region_rect = Rect2(160, 16, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_4ixqj")

[node name="HoverSound2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_67uqg")
volume_db = -30.0
pitch_scale = 1.2
autoplay = true

[node name="PickUpDropSound2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_i2xuy")
volume_db = -5.0
pitch_scale = 1.43
max_polyphony = 5

[node name="FullPointLight2D" parent="." instance=ExtResource("6_ymhag")]
radius = 0.639216
intensity = 4.83

[node name="Laser" parent="." instance=ExtResource("9_h26v7")]

[connection signal="finished" from="HoverSound2D" to="." method="_on_hover_sound_2d_finished"]
